Changed styles for inputs and fixed horizontal scroll

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -53,12 +53,9 @@
     place-items: center;
     font-weight: 700;
     text-decoration: none;
-    color: #fff;
-    background-color: #292929;
     border-radius: 8px;
     height: 56px;
     width: 100%;
-    border: none;
     color: #292929;
     border: 2px solid #f0f1f4;
     background-color: #f8f8fa;
